# dispatch

./: .dockerignore  .env.example  .gitignore  Dispatch.spec  Procfile  README.md  dispatch-diagram.html  pyproject.toml  railway.json  requirements.txt
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
docs/: BUNDLING.md  dispatch-summary.md
docs/design/: phone-as-approver.md  scheduled-dispatches.md
loopback/: loopback.py
scripts/: sign_and_notarize.sh  vendor_agents.py
site/: docs.html  index.html
skills/dispatch/: SKILL.md
src/dispatch/: browser.py  cli.py  mcp_server.py
src/dispatch/broker/: app.py  clerk.py  contexts.py  email.py  schema.sql  sms.py  state.py  store.py  workflows.py
src/dispatch/daemon/: __main__.py  broker_http.py  connlock.py  identity.py  local_app.py  machine_index.py  main.py  mcp_introspect.py  memory.py  nonces.py  workflow_routes.py  workflow_scheduler.py  workflows.py
src/dispatch/executor/: __init__.py  executor.py  runtime.py
src/dispatch/shared/: crypto.py  identity.py  schema.py  signing.py
src/dispatch/tray/: __main__.py  app.py  autostart.py  bundle.py  config.py  notify.py  window.py
src/dispatch/web/app/: app.js  index.html  styles.css
src/dispatch/web/desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/dispatch/web/desktop/legacy/: app.js  index.html  styles.css
src/dispatch/web/desktop/src/: App.tsx  index.css  main.tsx
src/dispatch/web/desktop/src/components/: AuthGate.tsx  ComposeDialog.tsx  DispatchRow.tsx  EdgeMemoryDialog.tsx  (+8 more)
src/dispatch/web/recipient/: app.js  index.html  styles.css
src/dispatch/web/sender/: app.js  index.html  styles.css
tests/: test_auth_login_gate.py  test_broker_http.py  test_browser.py  test_connlock.py  test_machine_index.py  test_memory_redaction.py  test_messages_threading.py  test_nonces.py  test_remote_approval.py  test_rich_payload.py  test_signing_approval.py  test_sms.py
(+33 files in other folders)
