[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatch-agent"
version = "0.1.0"
description = "Peer-to-peer agentic task courier — recipient daemon"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Dispatch authors" }]
keywords = ["ai", "agents", "claude", "dispatch", "peer-to-peer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "claude-agent-sdk>=0.2,<0.3",
  "pydantic>=2.7",
  "pyjwt>=2.10",
  "websockets>=13",
  "asyncpg>=0.30",
  "httpx>=0.27",
  "pynacl>=1.5",
  "keyring>=24",
  "certifi>=2024",
]

[project.optional-dependencies]
# macOS tray app — only needed on the recipient's laptop if they want the
# menu bar supervisor instead of running `dispatch-daemon` in a terminal.
tray = [
  "rumps>=0.4; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
  "pyobjc-framework-WebKit>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
dispatch-daemon = "dispatch.daemon.main:main"
dispatch-tray   = "dispatch.tray.app:main"

[project.urls]
Homepage = "https://github.com/your-org/dispatch"
Issues = "https://github.com/your-org/dispatch/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dispatch*"]

[tool.setuptools.package-data]
# Ship the web assets (the broker serves these as static) and the
# Postgres schema (the broker runs this on startup) inside the wheel.
"dispatch" = [
  "web/**/*",
  "broker/schema.sql",
]
